--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "scroll-into-view-if-needed",
   "version": "1.0.0",
   "description": "Element.scrollIntoViewIfNeeded ponyfill that can animate the scrolling",
-  "main": "index.js",
+  "main": "dist/bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup src/index.js -c --output dist/bundle.js && rollup test/index.js -c -f umd --output test/bundle.js",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -22,5 +24,16 @@
   "bugs": {
     "url": "https://github.com/stipsan/scroll-into-view-if-needed/issues"
   },
-  "homepage": "https://github.com/stipsan/scroll-into-view-if-needed#readme"
+  "homepage": "https://github.com/stipsan/scroll-into-view-if-needed#readme",
+  "dependencies": {
+    "amator": "^1.0.1"
+  },
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-preset-es2015-rollup": "^1.1.1",
+    "rollup": "^0.25.8",
+    "rollup-plugin-babel": "^2.4.0",
+    "rollup-plugin-commonjs": "^2.2.1",
+    "rollup-plugin-node-resolve": "^1.5.0"
+  }
 }
