--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "scroll-into-view-if-needed",
   "version": "1.0.6",
   "description": "Element.scrollIntoViewIfNeeded ponyfill that can animate the scrolling",
-  "main": "dist/bundle.js",
+  "main": "dist/index.js",
   "typings": "typings.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup src/index.js --format cjs -c --output dist/bundle.js && rollup test/index.js -c -f umd --output test/bundle.js",
+    "build": "npm run clean && npm run build-module && npm run build-bundle",
+    "build-module": "babel src -d dist",
+    "build-bundle": "rollup src/index.js --format cjs -c --output dist/bundle.js && rollup test/index.js -c -f umd --output test/bundle.js",
+    "clean": "rm -rf dist",
     "prepublish": "npm run build",
     "postversion": "git add package.json && git commit -m \"chore(package): update version\"",
     "postpublish": "gh-release"
@@ -32,7 +35,8 @@
     "amator": "^1.0.1"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
+    "babel-cli": "^6.23.0",
+    "babel-preset-env": "^1.2.1",
     "babel-preset-es2015-rollup": "^3.0.0",
     "gh-release": "^2.2.1",
     "rollup": "^0.41.4",
