--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm run clean && npm run build-module && npm run build-bundle",
     "build-module": "babel src -d dist",
     "build-bundle": "rollup src/index.js --format cjs -c --output dist/bundle.js && rollup test/index.js -c -f umd --output test/bundle.js",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "prepublish": "npm run build",
     "postversion": "git add package.json && git commit -m \"chore(package): update version\"",
     "postpublish": "gh-release"
@@ -39,6 +39,7 @@
     "babel-preset-env": "^1.2.1",
     "babel-preset-es2015-rollup": "^3.0.0",
     "gh-release": "^2.2.1",
+    "rimraf": "^2.6.1",
     "rollup": "^0.41.4",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
