Fix: Windows compatibility and CommonJS interop change back to Babel 5 functionality (#121)
* Use rimraf instead of native rm for Windows support.

* Use babel-plugin-add-module-exports to retain CommonJS export for Node/browserify.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run clean && npm run build-module && npm run build-bundle",
     "build-module": "babel src -d dist",
     "build-bundle": "rollup src/index.js --format cjs -c --output dist/bundle.js && rollup test/index.js -c -f umd --output test/bundle.js",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "prepublish": "npm run build",
     "changelog:preview": "sr-changelog",
     "changelog:commit": "sr-changelog commit",
@@ -41,9 +41,11 @@
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-env": "^1.2.1",
     "babel-preset-es2015-rollup": "^3.0.0",
     "release-relief": "^1.0.1",
+    "rimraf": "^2.6.1",
     "rollup": "^0.41.4",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
