A few more keywords while at it

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "ponyfill",
     "smooth",
     "scroll",
+    "scrollIntoView",
+    "scrollIntoViewIfNeeded",
+    "smooth",
     "scroll-into-view"
   ],
   "author": "Stian Didriksen",
