about to setup prettier

--- a/package.json
+++ b/package.json
@@ -47,6 +47,10 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-env": "^1.2.1",
     "babel-preset-es2015-rollup": "^3.0.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.3.0",
+    "prettier": "^1.7.4",
+    "prettier-package-json": "^1.4.0",
     "release-relief": "^1.0.1",
     "rimraf": "^2.6.1",
     "rollup": "^0.41.4",
