--- a/package.json
+++ b/package.json
@@ -1,41 +1,28 @@
 {
   "name": "scroll-into-view-if-needed",
   "description": "Element.scrollIntoViewIfNeeded ponyfill that can animate the scrolling",
-  "main": "dist/index.js",
-  "typings": "typings.d.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run clean && npm run build-module && npm run build-bundle",
-    "build-module": "babel src -d dist",
-    "build-bundle": "rollup src/index.js --format cjs -c --output dist/bundle.js && rollup test/index.js -c -f umd --output test/bundle.js",
-    "clean": "rimraf dist",
-    "prepublish": "npm run build",
-    "changelog:preview": "sr-changelog",
-    "changelog:commit": "sr-changelog commit",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
-  },
-  "release": {
-    "analyzeCommits": "semantic-release-tamia/analyzeCommits",
-    "verifyConditions": "condition-circle",
-    "generateNotes": "semantic-release-tamia/generateNotes",
-    "verifyRelease": "semantic-release-tamia/verifyRelease"
-  },
+  "author": "Stian Didriksen",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/stipsan/scroll-into-view-if-needed.git"
   },
-  "keywords": [
-    "ponyfill",
-    "smooth",
-    "scroll",
-    "scroll-into-view"
-  ],
-  "author": "Stian Didriksen",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/stipsan/scroll-into-view-if-needed/issues"
   },
-  "homepage": "https://github.com/stipsan/scroll-into-view-if-needed#readme",
+  "main": "dist/bundle.js",
+  "scripts": {
+    "build": "npm run clean && npm run build-module && npm run build-bundle",
+    "build-bundle": "rollup -c",
+    "build-module": "tsc",
+    "changelog:commit": "sr-changelog commit",
+    "changelog:preview": "sr-changelog",
+    "clean": "rimraf dist",
+    "precommit": "lint-staged",
+    "prepublishOnly": "yarn build",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "test": "tsc --noEmit"
+  },
   "dependencies": {
     "amator": "1.0.1"
   },
@@ -44,11 +31,54 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-env": "^1.2.1",
     "babel-preset-es2015-rollup": "^3.0.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.3.0",
+    "prettier": "^1.7.4",
     "release-relief": "^1.0.1",
     "rimraf": "^2.6.1",
-    "rollup": "^0.41.4",
+    "rollup": "^0.50.0",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "^2.0.0"
-  }
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "typescript": "^2.6.1"
+  },
+  "keywords": [
+    "ponyfill",
+    "scroll",
+    "scroll-into-view",
+    "scrollIntoView",
+    "scrollIntoViewIfNeeded",
+    "smooth",
+    "smooth"
+  ],
+  "lint-staged": {
+    "*.html": [
+      "npx https://gist.github.com/stipsan/0d0578fe92bcdeb024a0af2a3e2a9e2a",
+      "git add"
+    ],
+    "*.js": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.ts": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.json": [
+      "prettier --write",
+      "git add"
+    ],
+    "package.json": [
+      "npx prettier-package-json --write",
+      "git add"
+    ]
+  },
+  "module": "dist/index.js",
+  "release": {
+    "analyzeCommits": "semantic-release-tamia/analyzeCommits",
+    "verifyConditions": "condition-circle",
+    "generateNotes": "semantic-release-tamia/generateNotes",
+    "verifyRelease": "semantic-release-tamia/verifyRelease"
+  },
+  "typings": "dist/index.d.ts"
 }
