preparing for new docs page

--- a/package.json
+++ b/package.json
@@ -27,14 +27,21 @@
     "amator": "1.0.1"
   },
   "devDependencies": {
+    "@types/next": "^2.4.5",
+    "@types/react": "^16.0.20",
+    "@types/react-dom": "^16.0.2",
     "babel-cli": "^6.23.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-env": "^1.2.1",
     "babel-preset-es2015-rollup": "^3.0.0",
+    "concurrently": "^3.5.0",
     "cypress": "^1.0.3",
     "husky": "^0.14.3",
     "lint-staged": "^4.3.0",
+    "next": "^4.1.4",
     "prettier": "^1.7.4",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "release-relief": "^1.0.1",
     "rimraf": "^2.6.1",
     "rollup": "^0.50.0",
