refactor to a structure compatible with github pages

--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "prebuild": "yarn clean",
     "build": "yarn build:tsc && yarn build:rollup",
     "build:rollup": "rollup -c",
-    "build:tsc": "tsc -p . -p docs",
+    "build:tsc": "tsc -p . -p example",
     "changelog:commit": "sr-changelog commit",
     "changelog:preview": "sr-changelog",
     "clean": "rimraf dist",
     "precommit": "lint-staged",
-    "dev": "concurrently \"yarn build:tsc --watch\" \"yarn build:rollup -w\" \"next dev docs\"",
+    "dev": "concurrently \"yarn build:tsc --watch\" \"yarn build:rollup -w\" \"next dev example\"",
+    "predocs": "yarn build",
+    "docs": "next build example && next export -o ./docs example",
     "prepublishOnly": "yarn build",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "test": "yarn build:tsc --noEmit"
