prepare to add docs folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true
   },
-  "exclude": ["node_modules", "dist", "**/*-test.ts"]
+  "exclude": ["node_modules", "dist", "example", "**/*-test.ts"]
 }
