POC for new docs generation (#138)
* refactor to a structure compatible with github pages

* add url to package.json

* remove jekyll template as it didn't work as expected (my bad)

* keep dist folder

* Revert "keep dist folder"

This reverts commit 95226a0e5523a038d35bf2fec951d1965e714f57.

* typo

* prepare to add docs folder

* update tsc commands to work correctly

* output docs

* update ci test script

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Element.scrollIntoViewIfNeeded ponyfill that can animate the scrolling",
   "author": "Stian Didriksen",
   "license": "MIT",
+  "homepage": "https://stipsan.github.io/scroll-into-view-if-needed",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/stipsan/scroll-into-view-if-needed.git"
@@ -15,15 +16,19 @@
     "prebuild": "yarn clean",
     "build": "yarn build:tsc && yarn build:rollup",
     "build:rollup": "rollup -c",
-    "build:tsc": "tsc -p . -p docs",
+    "build:tsc": "yarn tsc:main && yarn tsc:example",
     "changelog:commit": "sr-changelog commit",
     "changelog:preview": "sr-changelog",
     "clean": "rimraf dist",
     "precommit": "lint-staged",
-    "dev": "concurrently \"yarn build:tsc --watch\" \"yarn build:rollup -w\" \"next dev docs\"",
+    "dev": "concurrently \"yarn tsc:main --watch\" \"yarn tsc:example --watch\" \"yarn build:rollup -w\" \"next dev example\"",
+    "predocs": "yarn build",
+    "docs": "next build example && next export -o ./docs example",
     "prepublishOnly": "yarn build",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
-    "test": "yarn build:tsc --noEmit"
+    "test": "yarn tsc:main --noEmit && yarn tsc:example --noEmit",
+    "tsc:example": "tsc -p example",
+    "tsc:main": "tsc -p ."
   },
   "dependencies": {
     "amator": "1.0.1"
