--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^2.0.0",
+    "system-font-stack": "^1.0.2",
     "typescript": "^2.6.1"
   },
   "keywords": [
