working on example

--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
     "target": "esnext",
-    "module": "commonjs",
+    "module": "esnext",
     "moduleResolution": "node",
     "jsx": "react-native",
     "noUnusedLocals": true,
