--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "type": "git",
     "url": "git+https://github.com/stipsan/scroll-into-view-if-needed.git"
   },
+  "version": "0.0.0-dev",
   "main": "dist/bundle.js",
   "scripts": {
     "prebuild": "yarn clean",
@@ -38,8 +39,6 @@
     "@types/react-dom": "^16.0.2",
     "babel-cli": "^6.23.0",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-module-resolver": "^2.7.1",
-    "babel-plugin-root-import": "^5.1.0",
     "babel-preset-env": "^1.2.1",
     "babel-preset-es2015-rollup": "^3.0.0",
     "classnames": "^2.2.5",
@@ -58,6 +57,7 @@
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^2.0.0",
+    "scroll-into-view-if-needed": "link:.",
     "system-font-stack": "^1.0.4",
     "typescript": "^2.6.1"
   },
