--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "type": "git",
     "url": "git+https://github.com/stipsan/scroll-into-view-if-needed.git"
   },
+  "version": "0.0.0-dev",
   "main": "dist/bundle.js",
   "scripts": {
     "prebuild": "yarn clean",
@@ -21,6 +22,7 @@
     "dev": "concurrently \"yarn tsc:main --watch\" \"yarn tsc:example --watch\" \"yarn build:rollup -w\" \"next dev example\"",
     "predocs": "yarn build",
     "docs": "next build example && DOCS=true next export -o ./docs example && npx -p https://gist.github.com/stipsan/bbf4adcdafd9eabfa6a9a42397a1c1b9 -c 'git-update-ghpages'",
+    "postinstall": "yarn build",
     "prepublishOnly": "yarn build",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "test": "yarn tsc:main --noEmit && yarn tsc:example --noEmit",
@@ -31,6 +33,7 @@
     "amator": "1.0.1"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.3",
     "@types/next": "^2.4.5",
     "@types/react": "^16.0.20",
     "@types/react-dom": "^16.0.2",
@@ -38,6 +41,7 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-env": "^1.2.1",
     "babel-preset-es2015-rollup": "^3.0.0",
+    "classnames": "^2.2.5",
     "concurrently": "^3.5.0",
     "cypress": "^1.0.3",
     "husky": "^0.14.3",
@@ -53,6 +57,8 @@
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^2.0.0",
+    "scroll-into-view-if-needed": "link:.",
+    "system-font-stack": "^1.0.4",
     "typescript": "^2.6.1"
   },
   "keywords": [
