--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "dev": "concurrently \"yarn tsc:main --watch\" \"yarn tsc:example --watch\" \"yarn build:rollup -w\" \"next dev example\"",
     "predocs": "yarn build",
     "docs": "next build example && DOCS=true next export -o ./docs example && npx -p https://gist.github.com/stipsan/bbf4adcdafd9eabfa6a9a42397a1c1b9 -c 'git-update-ghpages'",
-    "postinstall": "yarn build",
-    "prepublishOnly": "yarn build",
+    "prepublish": "yarn build",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "test": "yarn tsc:main --noEmit && yarn tsc:example --noEmit",
     "tsc:example": "tsc -p example",
