revert too agressive ignore in #144

--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,13 @@
-**/*
-!dist
-!CHANGELOG.md
-!LICENSE
-!package.json
-!README.md
+.circleci
+.vscode
+cypress
+docs
+example
+src
+.editorconfig
+.prettierignore
+.prettierrc
+cypress.json
+rollup.config.js
+tsconfig.json
+yarn.lock
