--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,12 +18,15 @@ jobs:
             - v2-dependencies-{{ checksum "yarn.lock" }}
             - v2-dependencies-
 
+      - run: node --version
+
       - run: yarn install
 
       - run: yarn build
 
       - run: 
           command: yarn start
+          background: true
 
       - run: yarn test
 
