--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,10 @@ jobs:
 
       - run: node --version
 
+      - run: npx --version
+
+      - run: npm --version
+
       - run: yarn install
 
       - run: yarn build
