--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,8 @@ jobs:
           command: yarn start
           background: true
 
+      - run: npx wait-on http://localhost:3000
+
       - run: yarn test
 
       - save_cache:
