--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "prestart": "yarn build",
     "start": "next build example && next start example",
-    "test": "yarn tsc:main --noEmit && yarn tsc:example --noEmit",
+    "test": "cypress run",
     "tsc:example": "tsc -p example",
     "tsc:main": "tsc -p ."
   },
