--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,12 @@ jobs:
     steps:
       - checkout
 
+      - run: node --version
+
+      - run: npx --version
+
+      - run: npm --version
+
       - add-ssh-keys:
           fingerprints:
             - "e1:ca:5d:f0:58:11:c7:ae:b7:ac:4a:1b:cc:3a:0d:4a"
@@ -18,13 +24,12 @@ jobs:
             - v2-dependencies-{{ checksum "yarn.lock" }}
             - v2-dependencies-
 
-      - run: node --version
-
-      - run: npx --version
-
-      - run: npm --version
-
       - run: yarn install
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v2-dependencies-{{ checksum "yarn.lock" }}
 
       - run: yarn build
 
@@ -36,10 +41,14 @@ jobs:
 
       - run: yarn test
 
-      - save_cache:
-          paths:
-            - node_modules
-          key: v2-dependencies-{{ checksum "yarn.lock" }}
+      - store_test_results:
+          path: junit
+      - store_artifacts:
+          path: junit  
+      - store_artifacts:
+          path: cypress/videos
+      - store_artifacts:
+          path: cypress/screenshots
 
       - run: yarn semantic-release || true
 
