trying circleci image instead

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,12 @@ version: 2
 jobs:
   build:
     docker:
-      - image: cypress/base:8
+      #- image: cypress/base:8
+      - image: circleci/node:carbon
         environment:
           ## this enables colors in the output
           TERM: xterm
-          API_URL: https://api.cypress.io/
+          #API_URL: https://api.cypress.io/
 
     working_directory: ~/repo
 
