Fix: setup new release tag for test releases

--- a/package.json
+++ b/package.json
@@ -73,6 +73,9 @@
     "smoothscroll",
     "typescript"
   ],
+  "publishConfig": {
+    "tag": "next"
+  },
   "lint-staged": {
     "*.js": [
       "prettier --write",
